force-app/main/default/objects/ssot__ProductCategory__dlm/ssot__ProductCategory__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityGroup>Product Catalog</referenceEntityGroup>
        <referenceEntityName>ProductCategory</referenceEntityName>
        <referenceEntitySubjectArea>Product</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>