force-app/main/default/objects/ssot__ProductCategory__dlm/fields/KQ_ParentCategoryId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ParentCategoryId__c</fullName>
    <label>Key Qualifier Parent Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_ParentCategoryId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>